--- a/app/views/mailer/verification.erb
+++ b/app/views/mailer/verification.erb
@@ -1,13 +1,13 @@
 Hallo <%= @activist.name %>,
 
-eine/r hat auf der Website <%= APP_CONFIG[:base_url] %>/protest Deine Emailadresse eingetragen,
-um Protestbriefe an Vattenfall zu verschicken. Um die Briefe endgültig abzuschicken, bitte hier bestätigen:
+Deine Emailadresse wurde auf der Website <%= APP_CONFIG[:base_url] %> verwendet,
+um Protestbriefe an Vattenfall zu verschicken. Damit die Briefe endgültig abgeschickt werden, bitte diesen Link öffnen:
 
   <%= @link %>
 
-Falls Du Deine Email-Adresse nicht eingetragen hast, willst Du ja vielleicht selbst einen Protestbrief an Vattenfall formulieren: <%= APP_CONFIG[:base_url] %>
+Falls Du Deine Emailadresse nicht eingetragen hast, willst Du ja vielleicht trotzdem einen Protestbrief an Vattenfall formulieren: <%= APP_CONFIG[:base_url] %>
 
-Klima-Killer vor Gericht, Klimaschützer freisprechen!
+Wir lassen uns Klimaschutz nicht verbieten – erst recht nicht von Vattenfall!
 
 Deine
 Kampagne Ausgekohlt!
