--- a/app/views/protest/delivered.html.haml
+++ b/app/views/protest/delivered.html.haml
@@ -4,9 +4,14 @@
   Danke für Deine Teilnahme! Dein Brief wurde gerade an Vattenfall verschickt.
 %p
   Zur Bestätigung bekommst Du auch eine Kopie. Die anderen Empfänger sind:
-%ul
-  %li Tuomas Hataka (Vorstandsvorsitzer Vattenfall Europe AG)Vielen Dank.
-%p
-  FIXME: Freunde informieren ...
-%p
-  FIXME: Spenden ...
+  %ul
+    %li Lars Göran Josefsson (Vorstandsvorsitzender Vattenfall AB)
+    %li Tuomo Hatakka (Vorstandsvorsitzender Vattenfall Europe AG)
+    %li Reinhardt Hassa (Vorstandssprecher der Vattenfall Europe Generation AG)
+    %li Heinrich Breuer (Chef Kraftwerksmanagement bei Vattenfall Europa Generation)
+    %li Maud Olofsson (Schwedische Wirtschaftsministerin als Eigner von Vattenfall)
+    %li Andreas Carlgren (Schwedischer Umweltminister als Eigner von Vattenfall)
+    %li Vattenfall-Kundendienst Berlin
+    %li Vattenfall Kundendienst Hamburg
+    %li Vattenfall Pressestelle
+    %li Carl XIV. Gustav (König von Schweden als Eigner von Vattenfall)
