--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -1,30 +1,29 @@
 - title "Vattenfall sucks!"
 
 %p
-  Stopp Vattenfall: Klima-Killer vor Gericht – Klimaschützer freisprechen!
-  = link_to "Jetzt online Briefe an Vattenfall versenden!", :controller => 'protest'
+  Vattenfall verklagt Klimaschützer/innen –
+  = link_to "Jetzt online demonstrieren!", :controller => 'protest'
 
 %p
-  Der Energiekonzern Vattenfall plant in Hamburg-Moorburg ein neues
-  Steinkohlekraftwerk – einen wahren Klima-Killer. Mit Kraftwerk würde der
-  CO²-Ausstoß der Stadt Hamburg um 40 Prozent steigen und die umliegenden,
-  ohnehin sozial benachteiligten Stadtteile stark mit Abgasen belastet – mit
-  Rückendeckung des schwarz-grünen Hamburger Senats.
+  Mehr als 30 Klimaschützer/innen hatten im letzten Sommer die Baustelle des geplanten Kohlekraftwerks
+  in Hamburg-Moorburg besetzt. Im Rahmen eines Klimacamps hissten sie auf einem Kran das Banner „Stromkonzerne enteignen!“,
+  was bundesweit für Aufsehen sorgte. Nun versucht Vattenfall, die KlimaschützerInnen für ihre Aktion zivilen Ungehorsams
+  zur Kasse zu bitten – und baut täglich weiter an seinem Klima-Killer.
 
+%h3 Klimasünder bestraft Klimaschützer?
 %p
-  Im Rahmen eines Klimacamps letzten Sommer besetzten 30 Klimaschützer kurzerhand
-  die Baustelle und hissten ein Banner „Stromkonzerne enteignen!“ Nun sorgt Vattenfall
-  dafür, dass diese Menschen vor Gericht gestellt werden und mit hohen Geldstrafen
-  belegt werden sollen.
+  Verkehrte Welt: Vattenfall ist einer der größten Klimazerstörer Europas.
+  Und jetzt will der Konzern will auch noch Menschen bestrafen, die sich aktiv für Klimaschutz einsetzen!
+  Dabei haben sie mit der Besetzung der Baustelle nur das gemacht, was in Anbetracht der nahenden
+  Klimakatastrophe dringend notwendig ist: Sie haben versucht ein Bauvorhaben zu stoppen, welches das Klima
+  in den nächsten 40 Jahren mit Millionen von Tonnen CO<sub>2</sub> belasten würde.
 
+%h3 Vattenfall klagt an – Tu etwas dagegen!
 %p
-  Diese Ignoranz empört uns – wie auch zahlreiche andere Menschen.
-  Sie haben nachgefragt, wie sie ihre Solidarität mit den Angeklagten und
-  ihre Empörung über Vattenfall ausdrücken können. Dafür haben wir jetzt ein Mittel geschaffen:
-  Auf dieser Website könnt ihr Briefe an den Vattenfall-Vorstand schreiben und weitere Aktionen gegen den Klima-Killer ankündigen!
+  Schick jetzt dem Vattenfall-Vorstand Deine Meinung: Beteilige Dich an der Aktion „ausgekohlt“
+  und fordere den Konzern auf, die Anzeigen sofort fallen zu lassen und die Bauarbeiten am
+  Klima-Killer in Hamburg-Moorburg einzustellen.
+  = link_to "Hier klicken!", :controller => 'protest'
 
-%p
-  Zeigt eure Solidarität, schickt Protestbriefe an Vattenfall!
-
-%p
-  %b Klimaschützer freisprechen – Klima-Killer vor Gericht!
+%h3 Klimaschutz statt Vattenfall
+%p Wir lassen uns Klimaschutz nicht verbieten – erst recht nicht von Vattenfall
