--- a/app/views/site/privacy.html.haml
+++ b/app/views/site/privacy.html.haml
@@ -1,3 +1,7 @@
 - title "Datenschutzerklärung"
 
-%p Speichern Ihre Daten und verkaufen Sie an Greenpeace Energy und machen mächtig Kohle.
+%p
+  Alle Daten, die auf dieser Seite erfasst werden, verwenden wir nur im Rahmen dieser Kampagne und zum Versenden der Emails an die angegebenen Empfänger/innen. Ihre Daten werden nicht an Dritte weitergegeben. 
+%p
+  Für weitere Fragen zum Datenschutzt wenden Sie sich bitte an 
+  = mail_to "datenschutz@...."
