--- a/app/views/site/supported.html.haml
+++ b/app/views/site/supported.html.haml
@@ -1,3 +1,18 @@
 - title "Unterstützerinnen"
 
-%p Wir wollen Euch nicht mit Details quälten. Nur soviel. Es sind wahnsinnig viele!
+%p
+  %ul
+    %li= link_to "BUND Hamburg", "http://bund-hamburg.bund.net/"
+    %li= link_to "gegenstromBerlin", "http://www.gegenstromberlin.net/"
+    %li= link_to "Tschüss Vattenfall", "http://www.hamburg-steigt-um.de/"
+    %li= link_to "Grüne Jugend", "http://www.gruene-jugend.de"
+    %li= link_to "Avanti Projekt undogmatische Linke", "http://www.avanti-projekt.de/"
+
+%p
+  Ihr seid eine Gruppe, die unsere „ausgekohlt“-Kampagne unterstützen möchte? Schickt eine Email an:
+  = mail_to "info[at]ausgekohlt.de/net/info"
+  Wir freuen uns über jede Unterstützung!
+%p
+  Die Gerichtsverfahren gegen die Aktivist/innen kosten viel Geld: Einen Teil der Kosten können wir gut decken,
+  aber für Anwält/innen, Öffentlichkeitsarbeit und Aktionen sind wir trotzdem auf Spenden angewiesen.
+  Wir bitten um eine Spende an:
