--- a/app/views/site/terms.html.haml
+++ b/app/views/site/terms.html.haml
@@ -1,3 +1,9 @@
 - title "Impressum"
 
-Hier kommt das Imprssum.
+%p
+  Inhaltlich verantwortliche Redakteurin sofern Beiträge nicht namentlich gekennzeichnet sind:
+  Elias??
+
+%h3 Haftungshinweis
+%p Für redaktionelle Beiträge, die namentlich gekennzeichnet sind, liegt die Verantwortung im Sinne des Presserechts beim Autor oder bei der Autorin.
+%p Für alle Links auf dieser Webseite gilt, dass die Betreiber/innen dieser Homepage keinerlei Einfluss auf die Gestaltung und die Inhalte der verlinkten Seiten haben. Deshalb distanzieren wir uns hiermit ausdrücklich von den Inhalten aller gelinkten Seiten auf dieser Homepage und machen uns deren Inhalte nicht zu eigen.
