--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
-    <title><%= h(yield(:title) || "Vattenfall sucks!") %></title>
+    <title>ausgekohlt! - <%= yield(:title) -%></title>
     <%= stylesheet_link_tag 'base' %>
     <%= javascript_include_tag 'prototype' %>
     <%= yield(:head) %>
