--- a/app/views/site/story.html.haml
+++ b/app/views/site/story.html.haml
@@ -1,87 +1,27 @@
 - title "Vattenfall verkohlt unsere Zukunft!"
 
-%p
-  Am 20. August 2008 stürmten 35 junge Leute auf das Gelände des sich im
-  Bau befindenden Kohlekraftwerks Moorburg in Hamburg.
-  Einige schafften es zu den Baukränen und besetzen diese für mehrere
-  Stunden. Auf dem Erdboden saßen über 20 Personen dicht einander
-  gedrängt, umstellt von der herbeigeeilten Polizei. Mehrere Stunden
-  harrten sie im Moorburger Schlamm aus, bis sie von der Polizei
-  festgenommen  wurden.
+%p Am 20. August 2008 besetzten mehr als 30 Menschen spontan das Gelände des Kohlekraftwerks Hamburg-Moorburg, das der Energiekonzern Vattenfall dort errichten möchte. Einige der Besetzer/innen kletterten auf Baukräne und hängten ein Banner mit der Aufforderung „Stromkonzerne enteignen!“. Andere blockierten mit einer Sitzblockade die Arbeiten auf einem Teil der Baustelle. Die Besetzer/innen harrten mehrere Stunden auf dem Kraftwerksgelände aus, bevor sie von der Polizei in Gewahrsam genommen wurden.
 
 %h3 Warum machen Jugendliche solche Aktionen?
 %p
   %i
-    „Mit den Bau neuer Kohlekraftwerke in Deutschland wird diese
-    Klimaschädliche Energiegewinnung auf die nächsten Jahrzehnte
-    zementiert. Dagegen streiten wir auch mit zivilem Ungehorsam
-    Denn mit dem Bau neuer Kohlekraftwerke verkohlt Vattenfall
-    unsere Zukunft.“
+    „Mit dem Bau neuer Kohlekraftwerke wird diese klimaschädlichste Form der Stromerzeugung für die nächsten Jahrzehnte zementiert. So werden Milliarden von Tonnen Kohlendioxid, die Luft geblasen, die das Klima verändern und dazu beitragen, die soziale Schieflage zu verschärfen. Der Klimawandel betrifft diejenigen am stärksten, die am wenigsten dazu beigetragen haben: die Menschen des globalen Südens und die sozial schwachen. Wir streiten auch mit Zivilem Ungehorsam gegen den Bau neuer Kohlekraftwerke, denn damit verkohlt Vattenfall unsere Zukunft.“
+%p Obwohl sich die Bundesregierung auf internationaler Ebene immer wieder als Vorreiter beim Klimaschutz aufspielt, tut sie tatsächlich nichts, um einen Kurswechsel in der Energie- und Klimapolitik einzuleiten. Sie stellt sich hinter die Interessen der großen Energiekonzerne, die weiterhin auf den Bau neuer Kohlekraftwerke setzen – ineffiziente und klimaschädliche Großkraftwerke, die eine Entwicklung von Erneuerbaren Energien behindern. Alleine hierzulande sind 29 weitere dieser Klima-Killer geplant. Damit ist die Bundesrepublik europäischer Spitzenreiter wenn es darum geht, für die nächsten 40 Jahre Milliarden von Tonnen Kohlendioxid zu produzieren.
 
-%h3 Kohle hat keine Zukunft!
-%p
-  In Deutschland werden die Kohlekraftwerke entweder mit Braunkohle
-  oder mit Steinkohle befeuert. Der Steinkohleabbau wird in Deutschland
-  noch zusätzlich subventioniert, da die Förderung im Ausland billiger
-  ist, als hierzulande. 2018. Wird die Subventionierung des
-  Steinkohleabbaus in Deutschland eingestellt, und damit auch der Abbau
-  selbst. Momentan gibt es in Deutschland 15 Braunkohlekraftwerke (mind.
-  100 MW Leistung) und 50 Steinkohlekraftwerke  (mind. 100 MW Leistung),
-  welche teilweise zusätzlich mit Gas befeuert  werden. Der Wirkungsgrad
-  liegt bei modernen Kraftwerken gerade einmal bei 40% bis 45%.
-  Europaweit sind im Moment 68 neue Kohlekraftwerke geplant, davon 33
-  in Deutschland. Mit diesen Planungen lassen sich nicht einmal die
-  (ohnehin nicht ausreichend) Einsparungsziele erreichen, auf deren
-  Einhaltung sich die Bundesregierung mit dem Kyoto-Protokoll
-  selbst festgelegt hat.
-%p
-  So stehen zehn der dreißig europäischen Braunkohlekraftwerke, die
-  am meisten CO2 emittieren, in Deutschland. Auch die Anwendung der
-  CCS-Technologie (Carbon Capture & Storage) ist noch in der Testphase,
-  ihre Umsetzung daher noch lange nicht sicher. Zudem bestehen Risiken
-  hinsichtlich der Lagerung (z.B. in leeren Erdgas Aquiferen), da CO2
-  unkontrolliert austreten und nicht absehbare Folgen haben könnte. In
-  Anbetracht der Brisanz des Klimawandels und müssen wir auf alternative,
-  regenerative Energien setzen, statt an alten Technologien festzuhalten.
+%h3 Rechtfertigt das eine Gesetzesübertretung?
+%p Mit der Baustellenbesetzung haben die Aktivist/innen bewusst einen Gesetzesbruch begangen und sich mit zivilem Ungehorsam gegen eine menschenverachtende Energiepolitik gestellt. Der Neubau von Kohlekraftwerken hat verheerende Auswirkungen auf den Klimawandel, der schon heute Menschen vertreibt, obdachlos macht und tötet. Die Veränderung des Klimas betrifft in erster Linie die Menschen im globalen Süden und diejenigen, die am wenigsten dazu beigetragen haben. In Anbetracht dieser katastrophalen sozialen Auswirkungen ist es völlig legitim, Baustellen zu besetzen, um neue Kohlekraftwerke zu verhindern.
 
-%h3 Energiekonzerne gehören in die öffentliche Hand!
-%p
-  In Deutschland halten vier große Energiekonzerne (RWE, EnBW,
-  Vattenfall und E.ON) das Monopol auf den Energiemärkten in den Händen.
-  Die Ressourcen und die Energie sollte aber allen Menschen zu gleichen
-  teilen zu gute kommen. Nicht Profit interessierten Großkonzernen. Wir
-  fordern einen vergesellschaftlichung der Energie und der Ressourcen.
-  Wir wollen die Energiekonzerne enteignen.
-%p
-  Wir wollen dezentrale und den regionalen Bedingungen angepasste
-  Energiegewinnung, mit dem Ziel, auf 100% erneuerbare Energien
-  umzusteigen. Mit einem guten europaweit ausgebauten Stromnetz können
-  die Erneuerbaren locker und zuverlässig jeder Zeit die Grund-, als
-  auch Mittel- und Spitzenlast abdecken.
+%h3 Was passierte nach der Besetzung?
+%p Nur drei Tage nach der kurzzeitigen Besetzung der Baustelle, versuchten am 23. August über 700 Leute gemeinsam, auf das Baugelände einzudringen. Diese massenhafte Aktion zivilen Ungehorsams konnte ein Großaufgebot der Polizei nur durch den massiven Einsatz von Wasserwerfern und Schlagstöcken verhindern. Die Polizei hielt die Menschen mit Gewalt davon ab das zu tun, weshalb sie gekommen waren: das Klima zu schützen.
 
-%h3 Erneuerbar ist die Zukunft!
+%h3 Welche juristischen Folgen droht den BesetzerInnen?
+%p Vattenfall hat gegen die Klimaschützer eine Anzeige wegen Hausfriedensbruch gestellt. Die Kriminalisierung der Aktivisten liegt damit alleine bei Vattenfall, denn der Konzern hat jederzeit die Möglichkeit, diese Anzeige wieder zurückzuziehen und damit die Strafverfolgung zu beenden. Sollte Vattenfall seine Anzeige aufrecht erhalten kommt es zu Gerichtsprozessen, die zu hohen Strafen für die Aktivisten führen können. Einige der Besetzer/innen wurden bereits zu Geldstrafen von mehreren hundert Euro verurteilt, bei anderen stehen die Gerichtsentscheidungen noch aus.
+
 %p
-  Mit einem Mix aus Energieeinsparung, erneuerbaren Energien und
-  energieeffizienteren Technologien können wir es schaffen: eine
-  energetische Klimaschutzrevolution. Unser Ziel muss es sein so schnell
-  wie möglich unserer Energieversorgung auf 100% erneuerbare Energien
-  umzustellen. Die fossilen Ressourcen, wie Erdöl und Kohle werden
-  knapper. Aber die Sonne scheint und der Wind weht ganz umsonst. Wir
-  müssen die natürlichen Energiequellen wie Geothermie, Wasserkraft und
-  Gezeiten nutzen, um saubere Energie herzustellen.
+  %b Jetzt müssen wir Druck machen auf Vattenfall! Der Energiekonzern muss die Strafanzeigen zurückziehen und einsehen, dass Klimaschutz mit Kohlekraftwerken nicht zu machen ist.
+
 %p
-  Wir besitzen bereits heute Technologien, wie z.B. Passivhäuser, die
-  problemlos Unmengen an Energie sparen. Sie müssen nur flächendeckend
-  genutzt werden! Wir brauchen noch mehr Forschung und Entwicklung von
-  immer energieeffizienteren Technologien.
+  %b= link_to "Jetzt Emails an den Vattenfall-Vorstand schicken!", :controller => 'protest'
+
 %p
-  Atomkraft ist für uns keine Lösung. Denn das gefährliche Risiko eines
-  Unfalls oder sogar GAUs besteht weiter fort. Atomkraft hinterlässt
-  strahlenden Müll, der eine Million Jahre ohne Kontakt zur Umwelt
-  gelagert werden müsste wofür keinerlei Lösung in Sicht scheint.
-%p
-  Eine Revolution für den Klimaschutz – das bedeutet für uns das wir die
-  Art wie wir Leben, Produzieren, Wirtschaften grundsätzlich Überdenken.
-  Nur in einer fairen und sozial Gerechten Welt können wir Klimaschutz
-  leisten und anders herum bedeutet konsequenter Klimaschutz auch
-  konsequenter Einsatz für eine gerechte Welt.
+  %b Die Gerichtsverfahren kosten zudem viel Geld – bitte hier spenden damit wir den Klageweg gegen die kriminalisierung durch Vattenfall gehen können.
