Fixed typing error.

--- a/app/views/site/story.html.haml
+++ b/app/views/site/story.html.haml
@@ -14,7 +14,7 @@
 %h3 Was passierte nach der Besetzung?
 %p Nur drei Tage nach der kurzzeitigen Besetzung der Baustelle, versuchten am 23. August über 700 Leute gemeinsam, auf das Baugelände einzudringen. Diese massenhafte Aktion zivilen Ungehorsams konnte ein Großaufgebot der Polizei nur durch den massiven Einsatz von Wasserwerfern und Schlagstöcken verhindern. Die Polizei hielt die Menschen mit Gewalt davon ab das zu tun, weshalb sie gekommen waren: das Klima zu schützen.
 
-%h3 Welche juristischen Folgen droht den BesetzerInnen?
+%h3 Welche juristischen Folgen drohen den BesetzerInnen?
 %p Vattenfall hat gegen die Klimaschützer eine Anzeige wegen Hausfriedensbruch gestellt. Die Kriminalisierung der Aktivisten liegt damit alleine bei Vattenfall, denn der Konzern hat jederzeit die Möglichkeit, diese Anzeige wieder zurückzuziehen und damit die Strafverfolgung zu beenden. Sollte Vattenfall seine Anzeige aufrecht erhalten kommt es zu Gerichtsprozessen, die zu hohen Strafen für die Aktivisten führen können. Einige der Besetzer/innen wurden bereits zu Geldstrafen von mehreren hundert Euro verurteilt, bei anderen stehen die Gerichtsentscheidungen noch aus.
 
 %p
