--- a/app/views/site/contact.html.haml
+++ b/app/views/site/contact.html.haml
@@ -1,2 +1,5 @@
-<h1>Site#contact</h1>
-<p>Find me in app/views/site/contact.html.erb</p>
+- title "Kontakt"
+
+%p
+  Wenn Ihr Kontakt zu der Kampagen ausgekohlt aufnehmen wollt schreibt eine E-Mail
+  an info@XXXX.
