--- a/app/views/site/privacy.html.haml
+++ b/app/views/site/privacy.html.haml
@@ -3,5 +3,5 @@
 %p
   Alle Daten, die auf dieser Seite erfasst werden, verwenden wir nur im Rahmen dieser Kampagne und zum Versenden der Emails an die angegebenen Empfänger/innen. Ihre Daten werden nicht an Dritte weitergegeben. 
 %p
-  Für weitere Fragen zum Datenschutzt wenden Sie sich bitte an 
-  = mail_to "datenschutz@...."
+  Für weitere Fragen zum Datenschutz wenden Sie sich bitte an 
+  = mail_to "datenschutz@XXXX.de"
