--- a/app/views/site/story.html.haml
+++ b/app/views/site/story.html.haml
@@ -2,7 +2,7 @@
 
 %p Am 20. August 2008 besetzten mehr als 30 Menschen spontan das Gelände des Kohlekraftwerks Hamburg-Moorburg, das der Energiekonzern Vattenfall dort errichten möchte. Einige der Besetzer/innen kletterten auf Baukräne und hängten ein Banner mit der Aufforderung „Stromkonzerne enteignen!“. Andere blockierten mit einer Sitzblockade die Arbeiten auf einem Teil der Baustelle. Die Besetzer/innen harrten mehrere Stunden auf dem Kraftwerksgelände aus, bevor sie von der Polizei in Gewahrsam genommen wurden.
 
-%h3 Warum machen Jugendliche solche Aktionen?
+%h3 Warum die Besetzung eines Kohlekraftwerkes?
 %p
   %i
     „Mit dem Bau neuer Kohlekraftwerke wird diese klimaschädlichste Form der Stromerzeugung für die nächsten Jahrzehnte zementiert. So werden Milliarden von Tonnen Kohlendioxid, die Luft geblasen, die das Klima verändern und dazu beitragen, die soziale Schieflage zu verschärfen. Der Klimawandel betrifft diejenigen am stärksten, die am wenigsten dazu beigetragen haben: die Menschen des globalen Südens und die sozial schwachen. Wir streiten auch mit Zivilem Ungehorsam gegen den Bau neuer Kohlekraftwerke, denn damit verkohlt Vattenfall unsere Zukunft.“
