--- a/app/views/site/terms.html.haml
+++ b/app/views/site/terms.html.haml
@@ -2,7 +2,15 @@
 
 %p
   Inhaltlich verantwortliche Redakteurin sofern Beiträge nicht namentlich gekennzeichnet sind:
-  Elias??
+%p
+  Benjamin Meichsner
+  %br/
+  Dresdener Str. 27
+  %br/
+  10999 Berlin
+  %br/
+  info [at] XXXX.de
+
 
 %h3 Haftungshinweis
 %p Für redaktionelle Beiträge, die namentlich gekennzeichnet sind, liegt die Verantwortung im Sinne des Presserechts beim Autor oder bei der Autorin.
