--- a/app/views/site/supported.html.haml
+++ b/app/views/site/supported.html.haml
@@ -12,7 +12,19 @@
   Ihr seid eine Gruppe, die unsere „ausgekohlt“-Kampagne unterstützen möchte? Schickt eine Email an:
   = mail_to "info[at]ausgekohlt.de/net/info"
   Wir freuen uns über jede Unterstützung!
+
+%h2 Spenden
 %p
   Die Gerichtsverfahren gegen die Aktivist/innen kosten viel Geld: Einen Teil der Kosten können wir gut decken,
   aber für Anwält/innen, Öffentlichkeitsarbeit und Aktionen sind wir trotzdem auf Spenden angewiesen.
   Wir bitten um eine Spende an:
+%p
+  Kontoinhaber: Vattenfall ausgekohlt
+  %br/
+  Kontonummer: 4018036800
+  %br/
+  Bankleitzahl: 43060967
+  %br/
+  Bank: GLS Bank
+  %br/
+  Stichwort: Gerichtsverfahren Klimacamp
