--- a/app/views/protest/verify.html.haml
+++ b/app/views/protest/verify.html.haml
@@ -1,9 +1,10 @@
 - title "Absender verfizieren"
 
 %p
-  Du erhälst in diesen Momenten eine Email zu Bestätigung der Emailadresse.
+  Du erhälst in diesem Moment eine Email zu Bestätigung der Emailadresse.
   %br/
   Bitte schau in Deinem Account nach und bestätige den Brief an Vattenfall, indem Du auf den Link klickst.
 
+%br/
 = render :partial => 'invitations/form'
   
