--- a/app/views/protest/delivered.html.haml
+++ b/app/views/protest/delivered.html.haml
@@ -3,15 +3,8 @@
 %p
   Danke für Deine Teilnahme! Dein Brief wurde gerade an Vattenfall verschickt.
 %p
-  Zur Bestätigung bekommst Du auch eine Kopie. Die anderen Empfänger sind:
-  %ul
-    %li Lars Göran Josefsson (Vorstandsvorsitzender Vattenfall AB)
-    %li Tuomo Hatakka (Vorstandsvorsitzender Vattenfall Europe AG)
-    %li Reinhardt Hassa (Vorstandssprecher der Vattenfall Europe Generation AG)
-    %li Heinrich Breuer (Chef Kraftwerksmanagement bei Vattenfall Europa Generation)
-    %li Maud Olofsson (Schwedische Wirtschaftsministerin als Eigner von Vattenfall)
-    %li Andreas Carlgren (Schwedischer Umweltminister als Eigner von Vattenfall)
-    %li Vattenfall-Kundendienst Berlin
-    %li Vattenfall Kundendienst Hamburg
-    %li Vattenfall Pressestelle
-    %li Carl XIV. Gustav (König von Schweden als Eigner von Vattenfall)
+  Zur Bestätigung bekommst Du auch eine Kopie.
+%p
+  = link_to "Weitersagen", recommend_path
+  |
+  = link_to "Spenden", "XXX"
