Added new supporter...

--- a/app/views/site/supported.html.haml
+++ b/app/views/site/supported.html.haml
@@ -7,6 +7,8 @@
     %li= link_to "Tschüss Vattenfall", "http://www.hamburg-steigt-um.de/"
     %li= link_to "Grüne Jugend", "http://www.gruene-jugend.de"
     %li= link_to "Avanti Projekt undogmatische Linke", "http://www.avanti-projekt.de/"
+    %li= link_to "glocal hanau", "http://www.linksnavigator.de/node/45"
+    %li= link_to "Attac", "http://www.attac.de"
 
 %p
   Ihr seid eine Gruppe, die unsere „ausgekohlt“-Kampagne unterstützen möchte? Schickt eine Email an:
