Implemented banner for promotion ...

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
           <li><%= link_to "News", :controller => 'site', :action => "news" -%></li>
           <li><%= link_to "Unterstützerinnen", :controller => 'site', :action => "supported" -%></li>
           <li><%= link_to "Hintergrund", :controller => 'site', :action => "story" -%></li>
+          <li><%= link_to "Materialien", :controller => 'site', :action => "materials" -%></li>
         </ul>
       </div>
       <div id="content">
