--- a/app/views/mailer/verification.erb
+++ b/app/views/mailer/verification.erb
@@ -10,8 +10,8 @@ Falls Du Deine Emailadresse nicht eingetragen hast, willst Du ja vielleicht trot
 Wir lassen uns Klimaschutz nicht verbieten – erst recht nicht von Vattenfall!
 
 Deine
-Kampagne Ausgekohlt!
+Kampagne Vattenfall ausgekohlt!
 
 --
-Kampagne Ausgekohlt!
+Vattenfall ausgekohlt!
 Im Internet unter: <%= APP_CONFIG[:base_url] %>
