--- a/app/views/site/contact.html.haml
+++ b/app/views/site/contact.html.haml
@@ -1,5 +1,5 @@
 - title "Kontakt"
 
 %p
-  Wenn Ihr Kontakt zu der Kampagen ausgekohlt aufnehmen wollt schreibt eine E-Mail
-  an info@XXXX.
+  Wenn Du Kontakt zu der Kampagene Vattenfall.ausgekohlt aufnehmen willst, dann schreib doch einfach eine E-Mail
+  an info [at] ausgekohlt.net
