--- a/app/views/site/materials.html.haml
+++ b/app/views/site/materials.html.haml
@@ -1,7 +1,228 @@
-- title "Materialien zur Unterstützung"
+- title "Spread the word - Banner, Schlüsselanhänger ..."
 
-Banner, Flyer und selbstverständlich Schlüsselanhänger
-<br/>
-<br/>
+%p
+  Du hast eine eigene Webseite, einen Blog oder bist zufällig mit jemandem befreundet die/der das hat?
+  Dann lade Dir eines unser Banner herunter und setze es auf die Seite.
 
+%h3 Lang und groß
+:plain
+  <object
+    classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+    codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0"
+    id="banner_ausgekohlt"
+    width="375" height="214"
+    >
+    <param name="movie" value="banner_ausgekohlt_full.swf">
+    <param name="bgcolor" value="#FF3300">
+    <param name="quality" value="high">
+    <param name="allowscriptaccess" value="samedomain">
+    <embed
+      type="application/x-shockwave-flash"
+      pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
+      name="banner_ausgekohlt"
+      width="375" height="214"
+      src="banner_ausgekohlt_full.swf"
+      bgcolor="#FF3300"
+      quality="high"
+      allowscriptaccess="samedomain"
+    >
+      <noembed></noembed>
 
+    </embed>
+  </object>
+%p
+  = link_to_function "HTML-Code zum einbauen", "Element.toggle('code-1')"
+  #code-1{:style => "display:none"}
+    %textarea{:rows => 15, :cols => 60, :wrap => 'off'}
+      :plain
+        <object
+          classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+          codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0"
+          id="banner_ausgekohlt"
+          width="375" height="214"
+          >
+          <param name="movie" value="banner_ausgekohlt_full.swf">
+          <param name="bgcolor" value="#FF3300">
+          <param name="quality" value="high">
+          <param name="allowscriptaccess" value="samedomain">
+          <embed
+            type="application/x-shockwave-flash"
+            pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
+            name="banner_ausgekohlt"
+            width="375" height="214"
+            src="banner_ausgekohlt_full.swf"
+            bgcolor="#FF3300"
+            quality="high"
+            allowscriptaccess="samedomain"
+          >
+            <noembed></noembed>
+
+          </embed>
+        </object>
+
+%h3 Kurz aber groß
+:plain
+  <object
+    classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+    codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0"
+    id="banner_ausgekohlt"
+    width="375" height="214"
+    >
+    <param name="movie" value="banner_ausgekohlt_short.swf">
+    <param name="bgcolor" value="#FF3300">
+    <param name="quality" value="high">
+    <param name="allowscriptaccess" value="samedomain">
+    <embed
+      type="application/x-shockwave-flash"
+      pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
+      name="banner_ausgekohlt"
+      width="375" height="214"
+      src="banner_ausgekohlt_short.swf"
+      bgcolor="#FF3300"
+      quality="high"
+      allowscriptaccess="samedomain"
+    >
+      <noembed></noembed>
+
+    </embed>
+  </object>
+%p
+  = link_to_function "HTML-Code zum einbauen", "Element.toggle('code-2')"
+  #code-2{:style => "display:none"}
+    %textarea{:rows => 15, :cols => 60, :wrap => 'off'}
+      :plain
+        <object
+          classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+          codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0"
+          id="banner_ausgekohlt"
+          width="375" height="214"
+          >
+          <param name="movie" value="banner_ausgekohlt_short.swf">
+          <param name="bgcolor" value="#FF3300">
+          <param name="quality" value="high">
+          <param name="allowscriptaccess" value="samedomain">
+          <embed
+            type="application/x-shockwave-flash"
+            pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
+            name="banner_ausgekohlt"
+            width="375" height="214"
+            src="banner_ausgekohlt_short.swf"
+            bgcolor="#FF3300"
+            quality="high"
+            allowscriptaccess="samedomain"
+          >
+            <noembed></noembed>
+          </embed>
+        </object>
+
+%h3 Lang aber klein
+:plain
+  <object
+    classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+    codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0"
+    id="banner_ausgekohlt"
+    width="263" height="150"
+    >
+    <param name="movie" value="banner_ausgekohlt_full.swf">
+    <param name="bgcolor" value="#FF3300">
+    <param name="quality" value="high">
+    <param name="allowscriptaccess" value="samedomain">
+    <embed
+      type="application/x-shockwave-flash"
+      pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
+      name="banner_ausgekohlt"
+      width="263" height="150"
+      src="banner_ausgekohlt_full.swf"
+      bgcolor="#FF3300"
+      quality="high"
+      allowscriptaccess="samedomain"
+    >
+      <noembed></noembed>
+
+    </embed>
+  </object>
+%p
+  = link_to_function "HTML-Code zum einbauen", "Element.toggle('code-3')"
+  #code-3{:style => "display:none"}
+    %textarea{:rows => 15, :cols => 60, :wrap => 'off'}
+      :plain
+        <object
+          classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+          codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0"
+          id="banner_ausgekohlt"
+          width="263" height="150"
+          >
+          <param name="movie" value="banner_ausgekohlt_full.swf">
+          <param name="bgcolor" value="#FF3300">
+          <param name="quality" value="high">
+          <param name="allowscriptaccess" value="samedomain">
+          <embed
+            type="application/x-shockwave-flash"
+            pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
+            name="banner_ausgekohlt"
+            width="263" height="150"
+            src="banner_ausgekohlt_full.swf"
+            bgcolor="#FF3300"
+            quality="high"
+            allowscriptaccess="samedomain"
+          >
+            <noembed></noembed>
+
+          </embed>
+        </object>
+
+%h3 Kurz und klein
+:plain
+  <object
+    classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+    codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0"
+    id="banner_ausgekohlt"
+    width="263" height="150"
+    >
+    <param name="movie" value="banner_ausgekohlt_short.swf">
+    <param name="bgcolor" value="#FF3300">
+    <param name="quality" value="high">
+    <param name="allowscriptaccess" value="samedomain">
+    <embed
+      type="application/x-shockwave-flash"
+      pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
+      name="banner_ausgekohlt"
+      width="263" height="150"
+      src="banner_ausgekohlt_short.swf"
+      bgcolor="#FF3300"
+      quality="high"
+      allowscriptaccess="samedomain"
+    >
+      <noembed></noembed>
+
+    </embed>
+  </object>
+%p
+  = link_to_function "HTML-Code zum einbauen", "Element.toggle('code-4')"
+  #code-4{:style => "display:none"}
+    %textarea{:rows => 15, :cols => 60, :wrap => 'off'}
+      :plain
+        <object
+          classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+          codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0"
+          id="banner_ausgekohlt"
+          width="263" height="150"
+          >
+          <param name="movie" value="banner_ausgekohlt_short.swf">
+          <param name="bgcolor" value="#FF3300">
+          <param name="quality" value="high">
+          <param name="allowscriptaccess" value="samedomain">
+          <embed
+            type="application/x-shockwave-flash"
+            pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
+            name="banner_ausgekohlt"
+            width="263" height="150"
+            src="banner_ausgekohlt_short.swf"
+            bgcolor="#FF3300"
+            quality="high"
+            allowscriptaccess="samedomain"
+          >
+            <noembed></noembed>
+
+          </embed>
+        </object>
