--- a/app/views/site/privacy.html.haml
+++ b/app/views/site/privacy.html.haml
@@ -1,7 +1,6 @@
 - title "Datenschutzerklärung"
 
 %p
-  Alle Daten, die auf dieser Seite erfasst werden, verwenden wir nur im Rahmen dieser Kampagne und zum Versenden der Emails an die angegebenen Empfänger/innen. Ihre Daten werden nicht an Dritte weitergegeben. 
+  Alle Daten, die auf dieser Seite erfasst werden, verwenden wir nur im Rahmen dieser Kampagne und zum Versenden der Emails an die angegebenen Empfänger/innen. Deine Daten werden nicht an Dritte weitergegeben.
 %p
-  Für weitere Fragen zum Datenschutz wenden Sie sich bitte an 
-  = mail_to "datenschutz@XXXX.de"
+  Für weitere Fragen zum Datenschutz wende Dich bitte an admin [at] ausgekohlt.net
