--- a/app/views/site/terms.html.haml
+++ b/app/views/site/terms.html.haml
@@ -1,7 +1,7 @@
 - title "Impressum"
 
 %p
-  Inhaltlich verantwortliche Redakteurin sofern Beiträge nicht namentlich gekennzeichnet sind:
+  Inhaltlich verantwortlicher Redakteur sofern Beiträge nicht namentlich gekennzeichnet ist:
 %p
   Benjamin Meichsner
   %br/
@@ -9,8 +9,7 @@
   %br/
   10999 Berlin
   %br/
-  info [at] XXXX.de
-
+  info [at] ausgekohlt.net
 
 %h3 Haftungshinweis
 %p Für redaktionelle Beiträge, die namentlich gekennzeichnet sind, liegt die Verantwortung im Sinne des Presserechts beim Autor oder bei der Autorin.
