--- a/app/views/mailer/protest_copy.erb
+++ b/app/views/mailer/protest_copy.erb
@@ -1,8 +1,6 @@
 Hallo <%= @activist.name %>,
 
-vielen Dank für Deine Teilnahme an der Aktion vattenfall.ausgekohlt.
-
-Spendenaufforderung?
+vielen Dank für Deine Teilnahme an der Kampagne Vattenfall hat ausgekohlt.
 
 Nachfolgend bekommst du nochmal den Text Deines Protestbriefes als Kopie:
 
