--- a/app/views/site/materials.html.haml
+++ b/app/views/site/materials.html.haml
@@ -21,7 +21,7 @@
       pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
       name="banner_ausgekohlt"
       width="375" height="214"
-      src="banner_ausgekohlt_full.swf"
+      src="/banner_ausgekohlt_full.swf"
       bgcolor="#FF3300"
       quality="high"
       allowscriptaccess="samedomain"
@@ -50,7 +50,7 @@
             pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
             name="banner_ausgekohlt"
             width="375" height="214"
-            src="banner_ausgekohlt_full.swf"
+            src="/banner_ausgekohlt_full.swf"
             bgcolor="#FF3300"
             quality="high"
             allowscriptaccess="samedomain"
@@ -77,7 +77,7 @@
       pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
       name="banner_ausgekohlt"
       width="375" height="214"
-      src="banner_ausgekohlt_short.swf"
+      src="/banner_ausgekohlt_short.swf"
       bgcolor="#FF3300"
       quality="high"
       allowscriptaccess="samedomain"
@@ -106,7 +106,7 @@
             pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
             name="banner_ausgekohlt"
             width="375" height="214"
-            src="banner_ausgekohlt_short.swf"
+            src="/banner_ausgekohlt_short.swf"
             bgcolor="#FF3300"
             quality="high"
             allowscriptaccess="samedomain"
@@ -132,7 +132,7 @@
       pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
       name="banner_ausgekohlt"
       width="263" height="150"
-      src="banner_ausgekohlt_full.swf"
+      src="/banner_ausgekohlt_full.swf"
       bgcolor="#FF3300"
       quality="high"
       allowscriptaccess="samedomain"
@@ -161,7 +161,7 @@
             pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
             name="banner_ausgekohlt"
             width="263" height="150"
-            src="banner_ausgekohlt_full.swf"
+            src="/banner_ausgekohlt_full.swf"
             bgcolor="#FF3300"
             quality="high"
             allowscriptaccess="samedomain"
@@ -188,7 +188,7 @@
       pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
       name="banner_ausgekohlt"
       width="263" height="150"
-      src="banner_ausgekohlt_short.swf"
+      src="/banner_ausgekohlt_short.swf"
       bgcolor="#FF3300"
       quality="high"
       allowscriptaccess="samedomain"
@@ -217,7 +217,7 @@
             pluginspage="http://www.adobe.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"
             name="banner_ausgekohlt"
             width="263" height="150"
-            src="banner_ausgekohlt_short.swf"
+            src="/banner_ausgekohlt_short.swf"
             bgcolor="#FF3300"
             quality="high"
             allowscriptaccess="samedomain"
