--- a/app/views/site/supported.html.haml
+++ b/app/views/site/supported.html.haml
@@ -1,7 +1,7 @@
 - title "Unterstützerinnen"
 
 %p
-  %ul
+  %ul#supporter
     %li= link_to "BUND Hamburg", "http://bund-hamburg.bund.net/"
     %li= link_to "gegenstromBerlin", "http://www.gegenstromberlin.net/"
     %li= link_to "Tschüss Vattenfall", "http://www.hamburg-steigt-um.de/"
