--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -68,6 +68,7 @@ a
     margin-bottom: 1em
     li
       margin-left: 2em
+      margin-top: .3em
   a
     color: #000
 
@@ -177,3 +178,16 @@ a
 #errorExplanation ul li
   font-size: 12px
   list-style: disc
+
+#protest-box
+  margin: 1em auto
+  width: 30em
+  background-color: #F9F9F9
+  border: 1px solid #777777
+  padding: 5px
+  .button
+    float: right
+    margin-left: 1em
+
+ul#supporter
+  font-size: 1.1em
