--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,7 @@
           </div>
         </div>
       </div>
+      <div class="clear"></div>
       <div id="footer">
         <ul>
           <li><%= link_to "Startseite", root_path %></li>
