Kleine Änderungen am Layout. Favicon eingebaut.

--- a/app/views/site/supported.html.haml
+++ b/app/views/site/supported.html.haml
@@ -11,8 +11,9 @@
     %li= link_to "Attac", "http://www.attac.de"
 
 %p
-  Ihr seid eine Gruppe, die unsere „ausgekohlt“-Kampagne unterstützen möchte? Schickt eine Email an:
-  = mail_to "info[at]ausgekohlt.de/net/info"
+  Ihr seid eine Gruppe, die unsere „ausgekohlt“-Kampagne unterstützen möchte? 
+  Schickt eine Email an: info [at] ausgekohlt.net
+  %br/
   Wir freuen uns über jede Unterstützung!
 
 %h2 Spenden
