--- a/app/views/site/banner.html.haml
+++ b/app/views/site/banner.html.haml
@@ -1,8 +1,7 @@
-- title "Spread the word - Banner, Schlüsselanhänger ..."
+- title "Banner, Schlüsselanhänger ..."
 
 %p
-  Du hast eine eigene Webseite, einen Blog oder bist zufällig mit jemandem befreundet die/der das hat?
-  Dann lade Dir eines unser Banner herunter und setze es auf die Seite.
+  Hier bekommst Banner aller Größe und Länge. Da ist bestimmt was für Dich dabei.
 
 %h3 Lang und groß
 :plain
