--- a/app/views/site/supported.html.haml
+++ b/app/views/site/supported.html.haml
@@ -9,6 +9,7 @@
     %li= link_to "Avanti Projekt undogmatische Linke", "http://www.avanti-projekt.de/"
     %li= link_to "glocal hanau", "http://www.linksnavigator.de/node/45"
     %li= link_to "Attac", "http://www.attac.de"
+    %li= link_to "Noya - das Jugendnetzwerk in Attac", "http://www.no-ya.de"
 
 %p
   Ihr seid eine Gruppe, die unsere „ausgekohlt“-Kampagne unterstützen möchte? 
@@ -16,18 +17,9 @@
   %br/
   Wir freuen uns über jede Unterstützung!
 
-%h2 Spenden
+%h2 Spread the word
 %p
-  Die Gerichtsverfahren gegen die Aktivist/innen kosten viel Geld: Einen Teil der Kosten können wir gut decken,
-  aber für Anwält/innen, Öffentlichkeitsarbeit und Aktionen sind wir trotzdem auf Spenden angewiesen.
-  Wir bitten um eine Spende an:
-%p
-  Kontoinhaber: Vattenfall ausgekohlt
-  %br/
-  Kontonummer: 4018036800
-  %br/
-  Bankleitzahl: 43060967
-  %br/
-  Bank: GLS Bank
-  %br/
-  Stichwort: Gerichtsverfahren Klimacamp
+  Du hast eine eigene Webseite, einen Blog oder bist zufällig mit jemandem befreundet die/der das hat?
+  Dann lade Dir eines unserer
+  = link_to "Banner", :action => 'banner'
+  herunter und setze es auf die Seite.
